<resources>
    <string name="app_name">InnovationANPR</string>
    <string name="hello_world">ANPR!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tipo_parqueadero">tipo_parqueadero</string>
    <string name="title_activity_registra_parqueadero">registra_parqueadero</string>
    <string name="title_activity_main_from_class">Gestion Entrada y Salida</string>
    <string name="seccion_1">Gestion Entrada y Salida</string>
    <string name="seccion_2">Libero</string>
    <string name="seccion_3">Consultas</string>
    <string name="otras_opciones">Otras opciones</string>
    <string name="opcion_1">Configuración</string>
    <string name="opcion_2">Acerca de</string>
    <string name="usuario">MENÚ ANPR</string>
    <string name="menu_abierto">Menu Abierto</string>
    <string name="menu_cerrado">Menu Cerrado</string>
    <string name="fragment1">Fragment 1</string>
    <string name="fragment2">Fragment 2</string>
    <string name="fragment3">Fragment 3</string>
    <string name="title_activity_tipo_cobro">tipo_cobro</string>
    <string name="title_activity_main_admin">main_admin</string>

    <string name="dialogo_linea_1">Error</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="opc1">CONSULTAS</string>
    <string name="opc2">GESTION EMPLEADOS</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
